--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,12 @@
         android:layout_weight="0.2"
         android:orientation="horizontal">
 
+        <ProgressBar
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"/>
+
         <TextView
             android:id="@+id/tvNum1"
             android:layout_width="0dp"
